--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Recent Full Stack Web Graduate Developer. Covered a bit of everything from HTML, CSS, JS, Python, Flask, SQL and Django etc
+                    Recent Full Stack Web Graduate Developer. Covered a bit of everything from HTML, CSS, JS, Python, Flask, SQL and Django etc.
                 </p>
             </div>
             <div class="col-sm-4">
