--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="assets/cv/Curriculum Vitae Darragh Martin-converted.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/Curriculum Vitae Darragh Martin (1).pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -143,7 +143,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I want to learn more and build up my skills along with gaining valuable experience in the IT industry. I'm an excellent communicator who thrives in bright and enthusiastic teams and the ability to learn quicky on the job.
+                                    I want to learn more and build up my skills along with gaining valuable experience in the IT industry. I'm an excellent communicator who thrives in a fast pace environment and working with enthusiastic teams and the ability to learn quicky on the job.
                                 </p>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/Curriculum Vitae Darragh Martin-converted.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/Curriculum Vitae Darragh Martin (1).pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
