--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            daradona10@gmail.com
+                            darraghjmartin10@gmail.com
                         </p>
                     </div>
                 </div>
