--- a/resume.html
+++ b/resume.html
@@ -59,15 +59,15 @@
                     </div>
                     <div class="timeline-item" data-dates="10/2016 - 12/2018">
                         <h4>Marko Ltd</h4>
-                        <p>Director/Secretary of Company</p>
+                        <p>Executive Director</p>
                     </div>
                     <div class="timeline-item" data-dates="08/2013 - 09/2016">
                         <h4>Marko Ltd</h4>
-                        <p>General Manager</p>
+                        <p>Operations Manager</p>
                     </div>
                     <div class="timeline-item" data-dates="08/2009 - 07/2013">
                         <h4>Marko Limited</h4>
-                        <p>Floor Manager</p>
+                        <p>Facilities Manager</p>
                     </div>
                 </div>
             </div>
